--- a/style.css
+++ b/style.css
@@ -3,15 +3,112 @@
 }
 
 body{
-    font-family: Arial, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
-    padding: 20px;
+    padding: 10px;
     background-color: #f4f4f4;
+    align-content: center;
+}
+
+.products {
+    display: flex;
+    gap: 10px;
+    max-width: 800px;
+    flex-wrap: wrap;
+    margin: 15px 100px;
+}
+
+.product{
+    width: 260px;
+    margin-top: 15px;
+
 }
 
 .product img{
     display: flex;
-    width: 20px;
-    height: 20px;
+    width: 90%;
+    height: 220px;
     object-fit: cover;
+    border-radius: 8px;
+}
+
+.p1{
+    font-size: 15px;
+    color: #7b7b7b;
+    margin-top: 40px;
+    margin-bottom: 3px;
+}
+
+.p2{
+    font-size: 16px;
+    color: #000;
+    font-weight: bold;
+     margin-top: 3px;
+        margin-bottom: 3px;
+}
+
+.price {
+    margin-top: 1px;
+    color: red;
+
+
+}
+
+.product button {
+    position: absolute;
+    background-color: #f4f4f4;
+    border-radius: 50px;
+    margin-left: 42px;
+    margin-top: -21px;
+    padding: 10px 45px;
+    border: 1px solid #000000;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h1{ 
+    margin: 10px 0px;
+    margin-bottom: 3px;
+    margin-right: 700px;
+}   
+
+.cart {
+    width : 340px;
+    border-radius: 3px;
+    margin: 40px -110px;
+    padding: 5px 20px;
+    height: 3   00px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: white;
+}
+
+.pcart {
+    font-size: 25px;
+    color: #b70909;
+}
+
+.main{  
+    display: flex;
+    gap: 10px;
+    max-width: 1380px;
+    margin: 20px auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: #f5eaea;
+    padding: 20px;
+}
+
+.cartitems {
+    font-size: 20px;
+    color: #000;
+    margin-top: 10px;
+}
+
+.checkoutbutton {
+    background-color: #b70909;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
 }
